2007-06-02  Jens Granseuer  <jensgr@gmx.net>

	* at-startup-session.c:
	* at-startup-session.h: remove obsolete files
	* main.c: (at_enable_toggled): remove leftover bits from bug
	#386413 to make distcheck pass

2007-05-05  Jens Granseuer  <jensgr@gmx.net>

	* at-enable-dialog.glade:
	* main.c: (create_dialog): set button images via code instead of
	relying on glade, so they respect the gtk-button-images xsetting
	(closes bug #362880)

2007-05-05  Jens Granseuer  <jensgr@gmx.net>

	* at-enable-dialog.glade: fix critical warning

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* at-properties.desktop.in.in: renamed Bugzilla product.

2007-04-26  George Kraft IV  <gk4@austin.ibm.com>

	Fixes #386413

	* main.c: (AT_STARTUP_DIR, AT_STARTUP_KEY, SR_PREFS_DIR),
	(init_startup_state, at_startup_toggled, at_startup_update_ui,
	(at_startup_changed): depricated the selection and startup
	of hardcoded assistive technologies.

	* main.c: (cb_at_preferences, cb_keyboard_preferences,
	cb_login_preferences): added callbacks to launch preference dialogs.

	* Makefile.am: depricated files at-startup-session.[ch]

	* at-enable-dialog.glade: removed the checkbox selection of
	assistive technologies and added a push button to launch
	the Preferred Applications dialog to setup ATs.

2007-04-08  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Kristof Vansant <de_lupus@pandora.be>
                                                                               
	* at-enable-dialog.glade: don't require gnome glade lib

2007-02-08  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (create_dialog), (main): fix some reference leaks and don't
	segfault if the glade file is not available

2006-08-07  Willie Walker <william.walker@sun.com>

	Fixes #348630

	* at-startup-session.c (at_startup_state_init, at_startup_state_update):
	look for orca binary in path.

	* at-startup-session.h: added new fields to enabled union.

	* main.c (init_startup_state): added information about orca.
	